# suru

./: Cargo.toml  README.md
examples/complex/: tasks.su
examples/complex/lib/: lib.h
examples/simple/: lib.cpp  lib.hpp  main.cpp  tasks.su
examples/test/: config.h.in  lib.c  lib.h.in  main.cpp  makeheader.sh  tasks.bld  tasks.su
examples/test/lib/: lib.c
src/: bldfile.pest  build.rs  functions.rs  hooks.rs  lib.rs  main.rs  once_fallible.rs  parser.rs  prologue.bld  sufile.pest  tasks.bld  util.rs
src/test/: lib.d  tasks.su
