[package]
name = "yaru"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
env_logger = "0.11.6"
indicatif = "0.17.11"
indicatif-log-bridge = "0.2.3"
log = { version = "0.4.26", features = ["max_level_debug", "release_max_level_warn"] }
num_cpus = "1.16.0"
pest = "2.7.15"
pest_derive = "2.7.15"
threadpool = "1.8.1"
