[package]
name = "suru"
description = "A modern replacement for make"
version = "2.2.1"
edition = "2021"
license-file = "LICENSE.md"
readme = "README.md"
repository = "https://github.com/DolphinGui/suru"
categories = ["command-line-utilities"]
keywords = ["build-system", "native"]

[dependencies]
clap = { version = "4.5.30", features = ["derive"] }
crossbeam = "0.8.4"
env_logger = "0.11.6"
indicatif = "0.17.11"
indicatif-log-bridge = "0.2.3"
log = { version = "0.4.26", features = ["max_level_debug", "release_max_level_warn"] }
num_cpus = "1.16.0"
pest = "2.7.15"
pest_derive = "2.7.15"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
threadpool = "1.8.1"
